Prevent overflowing the display
Display scroll-bar if content is too long.
Jump to the end of the scroll-bar to see current calculation.

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ button {
 .display span {
     color: lime;
     font-size: 50px;
+    overflow: auto;
 }
 
 .buttons-top {
